--- a/claseAvalos.html
+++ b/claseAvalos.html
@@ -18,6 +18,7 @@
         <H1>EJERCICIOS DE CLASE</H1> 
         <H3>Curso de JavaScript</H3>
         <h4>Patricia Avalos </h4>
+        <p> Gracias Eduardo! </p>
     </section>
 </header>
 
