añadir un párrafo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Condiciones en JavaScript</title>
     <script src="js/condicionales.js"></script> 
     <script src="js/ciclos.js"></script> 
-    <link rel="stylesheet" type="text/css" href="/css/estilos.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/estilos.css" media="screen" />
     </head>
 <body>
 <header>
