añadir un párrafo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <section id="SectionLogo">
-        <img src="\images\Logo-X3.jpg" alt="Logo Agencia Creativa" width="150px"> </section>
+        <img src="images/Logo-X3.jpg" alt="Logo Agencia Creativa" width="150px"> </section>
     
     <section id="encabezado">
         <H1>EJERCICIOS DE CLASE</H1> 
